fix: correct gap

--- a/styles/scss/components/index/_mobile_app.scss
+++ b/styles/scss/components/index/_mobile_app.scss
@@ -10,7 +10,7 @@
 		justify-content: center;
 		align-items: flex-start;
 		max-width: 630px;
-		gap: rem(440);
+		gap: rem(40);
 		color: map-get($colors, text, dark);
 	}
 
